feat(ui): implement Diff View for Phase 3 - Add DiffView with scrolling, file navigation, and color-coded lines - Parse jj show output into DiffContent model - Integrate with App state and key handling - Add 14 new unit tests for DiffView

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ coverage/
 
 # Claude Code
 .claude/
+CLAUDE.md
 
 # Project working files (design docs - local only)
 .work/
+
+# Jujutsu VCS (colocated mode)
+.jj/
