--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ crossterm = "0.28.1"
 ratatui = "0.30.0"
 color-eyre = "0.6.3"
 thiserror = "2.0"
+scopeguard = "1"
 
 # Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
 [profile.release]
