--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ license = "MIT"
 edition = "2024"
 repository = "https://github.com/nakamura-shuta/tij"
 homepage = "https://github.com/nakamura-shuta/tij"
+documentation = "https://docs.rs/tij"
 readme = "README.md"
 keywords = ["jujutsu", "jj", "tui", "vcs", "git"]
 categories = ["command-line-utilities", "development-tools"]
 rust-version = "1.85"
+exclude = [".work/", ".github/", "CLAUDE.md"]
 
 [dependencies]
 crossterm = "0.28.1"
