test: implement Phase 12.2 integration test suite
- Add TestRepo/RemoteRepo test helpers for jj repository testing
- Add integration tests (18 tests): basic, squash, destructive, bookmark, git, undo
- Add scenario tests (24 tests): 8 user story workflows
- Add snapshot tests (7 tests): Dialog and Help View using insta
- Add property-based tests (15 tests): parser robustness using proptest
- Update plan.md with Phase 12.2 completion status
- Update README.md with development/testing section
- Bump version to 0.3.12

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tij"
-version = "0.3.11"
+version = "0.3.12"
 description = "Text-mode interface for Jujutsu - a TUI for jj version control"
 authors = ["nakamura.shuta <nakamura.shuta@classmethod.jp>"]
 license = "MIT"
@@ -14,6 +14,14 @@ categories = ["command-line-utilities", "development-tools"]
 rust-version = "1.85"
 exclude = [".work/", ".github/", "CLAUDE.md"]
 
+[lib]
+name = "tij"
+path = "src/lib.rs"
+
+[[bin]]
+name = "tij"
+path = "src/main.rs"
+
 [dependencies]
 crossterm = "0.28.1"
 ratatui = "0.29.0"
@@ -22,6 +30,11 @@ thiserror = "2.0"
 scopeguard = "1"
 tui-textarea = { version = "0.7", features = ["crossterm"] }
 regex = "1"
+
+[dev-dependencies]
+insta = { version = "1.46.3", features = ["redactions"] }
+proptest = "1.10.0"
+tempfile = "3"
 
 # Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
 [profile.release]
